--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Home One || Getizy || HTML Template For Marketing Agency</title>
+        <title>Innoweb Solution | Complete IT Solution</title>
         <!-- favicons Icons -->
         <link rel="apple-touch-icon" sizes="180x180"
             href="assets/images/favicons/apple-touch-icon.png" />
@@ -59,7 +59,7 @@
 
         <div class="preloader">
             <div class="preloader__image"
-                style="background-image: url(assets/images/loader.png);"></div>
+                style="background-image: url(assets/images/myfolder/logo/jorney_logo_inno_icon.webp);"></div>
         </div>
         <!-- /.preloader -->
         <div class="page-wrapper">
@@ -839,7 +839,7 @@
                                 </div>
                                 <div class="about-one__logo__icon">
                                     <img
-                                        src="assets/images/resources/inner-logo-light.png"
+                                        src="assets/images/myfolder/logo/jorney_logo_inno_icon.webp"
                                         alt>
                                 </div>
                             </div>
@@ -947,7 +947,7 @@
                                         <a href="service-details.html"
                                             class="service-one__card__title">Digital
                                             <br>
-                                            Product Design</a>
+                                            Marketing</a>
                                         <p class="service-one__card__desc">There
                                             are many variations of passages of
                                             Lorem
@@ -970,9 +970,9 @@
                                             <span class="icon-growth-2"></span>
                                         </div>
                                         <a href="service-details.html"
-                                            class="service-one__card__title">marketing
+                                            class="service-one__card__title">Web
                                             <br>
-                                            strategy</a>
+                                            Application</a>
                                         <p class="service-one__card__desc">There
                                             are many variations of passages of
                                             Lorem
@@ -994,9 +994,9 @@
                                             <span class="icon-vector-1"></span>
                                         </div>
                                         <a href="service-details.html"
-                                            class="service-one__card__title">Modern
+                                            class="service-one__card__title">Graphic
                                             <br>
-                                            designing</a>
+                                            design</a>
                                         <p class="service-one__card__desc">There
                                             are many variations of passages of
                                             Lorem
@@ -2184,13 +2184,10 @@
                                     data-wow-duration='1500ms'
                                     data-wow-delay='000ms'>
                                     <div class="main-footer__logo">
-                                        <img
-                                            src="assets/images/footer-logo-light.png"
+                                        <img src="assets/images/myfolder/logo/inno_logo.png" style="width: 90%;"
                                             alt>
                                     </div>
-                                    <p class="main-footer__desc">There are many
-                                        variations of passages of Lorem ip
-                                        available, but the majority have </p>
+                                    <p class="main-footer__desc">Innoweb Solution is one of the leading web solutions company based in Delhi. Since the time of its inception, we have been striving to proffer result oriented, effective, quality and cost effective services to clients spread across the different industry verticals. </p>
                                     <div class="footer-widget--input">
                                         <form action="#"
                                             data-url="MAILCHIMP_FORM_URL"
@@ -2214,16 +2211,12 @@
                                         <h5>Links</h5>
                                     </div>
                                     <ul class="main-footer__navmenu__list">
-                                        <li><a href="about.html">About
-                                                Us</a></li>
-                                        <li><a href="about.html">Our
-                                                Mission</a></li>
-                                        <li><a href="team.html">Meet the
-                                                Team</a></li>
-                                        <li><a href="project.html">Our
-                                                Project</a></li>
+                                        <li><a href="about.html">Home</a></li>
+                                        <li><a href="about.html">About us</a></li>
+                                        <li><a href="team.html">Services</a></li>
+                                        <li><a href="project.html">Blog</a></li>
                                         <li><a
-                                                href="contact.html">Contact</a></li>
+                                                href="contact.html">Clients</a></li>
                                     </ul>
                                 </div>
                             </div><!-- /.col-xl-3 col-lg-2 col-md-6 -->
@@ -2236,14 +2229,10 @@
                                         <h5>Explore</h5>
                                     </div>
                                     <ul class="main-footer__navmenu__list">
-                                        <li><a href="services-grid.html">What We
-                                                Offer</a></li>
-                                        <li><a href="about.html">Our
-                                                Story</a></li>
-                                        <li><a href="blog-grid.html">Latest
-                                                News</a></li>
-                                        <li><a href="contact.html">Help
-                                                Center</a></li>
+                                        <li><a href="services-grid.html">Contact us</a></li>
+                                        <li><a href="about.html">FAQ</a></li>
+                                        <li><a href="blog-grid.html">Training & Certification</a></li>
+                                        <li><a href="contact.html">Terms & Condition</a></li>
                                     </ul>
                                 </div>
                             </div><!-- /.col-xl-2 col-lg-2 col-md-6 -->
@@ -2278,10 +2267,10 @@
                                                 class="fa-brands fa-facebook-f"></i></a>
                                         <a href="https://twitter.com"
                                             class="social-icon"><i
-                                                class="fa-brands fa-twitter"></i></a>
+                                                class="fa-brands fa-x-twitter"></i></a>
                                         <a href="https://pinterest.com"
                                             class="social-icon"><i
-                                                class="fa-brands fa-pinterest-p"></i></a>
+                                                class="fa-brands fa-instagram"></i></a>
                                         <a href="https://www.youtube.com/"
                                             class="social-icon"><i
                                                 class="fa-brands fa-youtube"></i></a>
@@ -2297,16 +2286,15 @@
                                     <div class="infu__icon"><span
                                             class="icon-phone-1"></span></div>
                                     <div class="infu__link">
-                                        <a href>+92 3800 8060</a>
-                                        <a href>+21 9555-0114</a>
+                                        <a href>+91-9911089108</a>
                                     </div>
                                 </div><!-- /.infu -->
                                 <div class="infu">
                                     <div class="infu__icon"><span
                                             class="icon-world"></span></div>
                                     <div class="infu__link">
-                                        <a href>mitc@example.com</a>
-                                        <a href>www.website.com</a>
+                                        <a href>info@innowebsolution.com</a>
+                                        <a href>infowebsolution@gmail.com</a>
                                     </div>
                                 </div><!-- /.infu -->
                             </div><!-- /.main-footer__inf -->
@@ -2317,8 +2305,7 @@
                                     <div class="infu__icon"><span
                                             class="icon-location"></span></div>
                                     <div class="infu__link">
-                                        <a href> 3891 Ranchview Dr. Richardson,
-                                            California 62639</a>
+                                        <a href> Maula Ali Road, Knowledge Park II, Greater Noida, Uttar Pradesh - 201310</a>
                                     </div>
                                 </div>
                             </div><!-- /.main-footer__infu -->
@@ -2328,9 +2315,9 @@
                 <div class="main-footer__bottom">
                     <div class="container">
                         <div class="main-footer__bottom__inner">
-                            <p class="main-footer__copyright"> &copy; Copyright
-                                <span class="dynamic-year"></span> by
-                                Company.com</p>
+                            <p class="main-footer__copyright"> &copy; Copyright 2025
+                                <span class="dynamic-year"></span> developed by
+                                Innoweb Solution</p>
                         </div><!-- /.main-footer__bottom__inner -->
                     </div><!-- /.container -->
                 </div><!-- /.main-footer__bottom -->
