--- a/index.html
+++ b/index.html
@@ -1066,8 +1066,8 @@
                                     <div
                                         class="service-one__content__eliment__logo">
                                         <img
-                                            src="assets/images/resources/inner-logo-dark.png"
-                                            alt>
+                                            src="assets/images/myfolder/logo/inno_logo.png"
+                                            style="width: 100%;">
                                     </div>
 
                                 </div>
